basic website with dummy info

--- a/pages/registry/index.html
+++ b/pages/registry/index.html
@@ -4,11 +4,11 @@
 
     <head>
 	<!--Title of page as appears on tab-->
-	<title>Our Wedding Website | Home</title>
+	<title>Our Wedding Website | Registry</title>
 
         <!--Link to favicon and stylesheets-->
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
-	<link rel="stylesheet" type="text/css" href="css/global.css"/>
+	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.png"/>
+	<link rel="stylesheet" type="text/css" href="../../css/global.css"/>
 	
     </head>
 	
@@ -21,12 +21,12 @@
             <div class="subtitle">September 10, 2023</div>
 	    <!--<img class="" src="../../images/.png"/>-->
 	    <nav>
-                <div class="nav_item"><a href=""><span>Home</span></a></div>
-        	<div class="nav_item"><a href="pages/our_story/index.html"><span>Our Story</span></a></div>
-	        <div class="nav_item"><a href="pages/photos/index.html"><span>Photos</span></a></div>
-		<div class="nav_item"><a href="pages/q_and_a/index.html"><span>Q & A</span></a></div>
-	        <div class="nav_item"><a href="pages/accommodations/index.html"><span>Accommodations</span></a></div>
-		<div class="nav_item"><a href="pages/registry/index.html"><span>Registry</span></a></div>
+                <div class="nav_item"><a href="../../index.html"><span>Home</span></a></div>
+        	<div class="nav_item"><a href="../our_story/index.html"><span>Our Story</span></a></div>
+	        <div class="nav_item"><a href="../photos/index.html"><span>Photos</span></a></div>
+		<div class="nav_item"><a href="../q_and_a/index.html"><span>Q & A</span></a></div>
+		<div class="nav_item"><a href="../accommodations/index.html"><span>Accommodations</span></a></div>
+		<div class="nav_item"><a href="../registry/index.html"><span>Registry</span></a></div>
 	    </nav>
 
 	</header>
@@ -34,7 +34,7 @@
 	<!--Div containing main body content of the page-->
 	<article>
 
-	    <h1>Welcome to Our Wedding Website!</h1>
+	    <h1>Registry</h1>
 	    <hr/>
 	    <hr/>
 				
