--- a/pages/registry/index.html
+++ b/pages/registry/index.html
@@ -9,6 +9,7 @@
         <!--Link to favicon and stylesheets-->
 	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="../../css/global.css"/>
+	<link rel="stylesheet" type="text/css" href="../../css/accommodations.css"/>
 	
     </head>
 	
@@ -38,45 +39,19 @@
 	    <hr/>
 	    <hr/>
 				
-	    <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-            ut labore et dolore magna aliqua. Quis hendrerit dolor magna eget est lorem ipsum dolor. 
-            Non enim praesent elementum facilisis. Pulvinar neque laoreet suspendisse interdum 
-            consectetur. Elit eget gravida cum sociis natoque penatibus. Vel pretium lectus quam 
-            id leo in vitae turpis massa. Enim praesent elementum facilisis leo vel fringilla. Libero 
-            nunc consequat interdum varius sit. Non consectetur a erat nam at lectus urna. Euismod 
-            elementum nisi quis eleifend quam adipiscing vitae proin. Et malesuada fames ac turpis. 
-            Mattis rhoncus urna neque viverra justo. Egestas quis ipsum suspendisse ultrices gravida 
-            dictum. Nam aliquam sem et tortor consequat id porta nibh. Ullamcorper malesuada proin 
-            libero nunc consequat interdum varius.
-            </p>
+	    <p>Your presence at our wedding is the greatest gift of all!</p>
+	    <p>However, if you wish to spoil us, we are registered at the companies below:</p>
 
-            <p>
-            Ornare aenean euismod elementum nisi quis eleifend quam adipiscing. Volutpat blandit aliquam 
-            etiam erat velit scelerisque in dictum. Id nibh tortor id aliquet. Ut tellus elementum 
-            sagittis vitae et. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim lobortis. 
-            Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Aliquet sagittis id 
-            consectetur purus ut. Fringilla urna porttitor rhoncus dolor purus non enim. Tincidunt dui 
-            ut ornare lectus sit amet est placerat in. Facilisis gravida neque convallis a cras. Interdum 
-            varius sit amet mattis vulputate enim nulla aliquet. Quam adipiscing vitae proin sagittis. 
-            Duis convallis convallis tellus id interdum velit. Posuere urna nec tincidunt praesent semper 
-            feugiat. Nunc consequat interdum varius sit. Ornare arcu dui vivamus arcu felis bibendum ut 
-            tristique et. Quis hendrerit dolor magna eget est lorem. Nisl rhoncus mattis rhoncus urna. 
-            Dictum non consectetur a erat nam at lectus. Eu feugiat pretium nibh ipsum.
-            </p>
+            <h3>Place #1</h3>
+            <p><a target="_blank" href="">Click here to open the registry.</a></p>
 
-            <p>
-            Neque viverra justo nec ultrices dui sapien. Purus viverra accumsan in nisl nisi scelerisque. 
-            Aliquet enim tortor at auctor urna nunc id cursus metus. Sit amet venenatis urna cursus 
-            eget nunc scelerisque viverra. Faucibus purus in massa tempor nec. Turpis massa tincidunt 
-            dui ut ornare. Interdum posuere lorem ipsum dolor sit. Vitae aliquet nec ullamcorper sit 
-            amet risus nullam. Lacinia quis vel eros donec ac odio tempor orci dapibus. Amet luctus 
-            venenatis lectus magna fringilla urna. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper. 
-            Lacinia at quis risus sed vulputate odio.
-            </p>
-	    
-            <hr/>
-	    <hr/>
+            <h3>Place #2</h3>
+            <p><a target="_blank" href="">Click here to open the registry.</a></p>
+
+            <h3>Place #3</h3>
+            <p><a target="_blank" href="">Click here to open the registry.</a></p>
+
+	    <br/> 
 
 	</article>
 
