--- a/pages/photos/index.html
+++ b/pages/photos/index.html
@@ -44,8 +44,8 @@
             
             <br/>
             <div class="row">
-                <a href="#img0166"><img src="${img_path}/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0166.jpg"></a>
-                <a href="#img0059"><img src="${img_path}/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0059.jpg"></a>
+                <a href="#img0166"><img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0166.jpg"></a>
+                <a href="#img0059"><img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main//images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0059.jpg"></a>
             </div>
             <div class="row">
                 <a href="#img0182"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0182.jpg" class="count-1"></a>
