found a way to circumvent git lfs to show images on pages, updated all the images accordingly

--- a/pages/photos/index.html
+++ b/pages/photos/index.html
@@ -43,60 +43,136 @@
 	    <hr/>
             
             <br/>
+
             <div class="row">
-                <a href="#img0166"><img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0166.jpg"></a>
-                <a href="#img0059"><img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main//images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0059.jpg"></a>
+                <a href="#img0166">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0166.jpg">
+                </a>
+                <a href="#img0059">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main//images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0059.jpg">
+                </a>
             </div>
+
             <div class="row">
-                <a href="#img0182"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0182.jpg" class="count-1"></a>
+                <a href="#img0182">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0182.jpg" 
+                         class="count-1">
+                </a>
             </div>
+
             <div class="row">
-                <a href="#img0288"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0288.jpg"></a>
-                <a href="#img0224"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0224.jpg"></a>
+                <a href="#img0288">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0288.jpg">
+                </a>
+                <a href="#img0224">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0224.jpg">
+                </a>
             </div>
+
             <div class="row">
-                <a href="#img0098"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0098.jpg"></a>
-                <a href="#img0261"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0261.jpg"></a>
+                <a href="#img0098">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0098.jpg">
+                </a>
+                <a href="#img0261">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0261.jpg">
+                </a>
             </div>
+
              <div class="row">
-                <a href="#img0047"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0047.jpg"></a>
-                <a href="#img0063"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0063.jpg"></a>
+                <a href="#img0047">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0047.jpg">
+                </a>
+                <a href="#img0063">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0063.jpg">
+                </a>
             </div>
+
             <div class="row">
-                <a href="#img0125"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0125.jpg" class="count-3"></a>
-                <a href="#img0150"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0150.jpg" class="count-3"></a>
-                <a href="#img0231"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0231.jpg" class="count-3"></a>
+                <a href="#img0125">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0125.jpg" 
+                         class="count-3">
+                </a>
+                <a href="#img0150">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0150.jpg" 
+                         class="count-3">
+                </a>
+                <a href="#img0231">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0231.jpg" 
+                         class="count-3">
+                </a>
             </div>
 
             <div class="row">
-                <a href="#img0015"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0015.jpg"></a>
-                <a href="#img0035"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0035.jpg"></a>
+                <a href="#img0015">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0015.jpg">
+                </a>
+                <a href="#img0035">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0035.jpg">
+                </a>
             </div>
 
+            <div class="row">
+                <a href="#img0351">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0351.jpg"
+                         class="count-3">
+                </a>
+                <a href="#img0293">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0293.jpg"
+                         class="count-3">
+                </a>
+                <a href="#img0486">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0486.jpg"
+                         class="count-3">
+                </a>
+            </div>
 
             <div class="row">
-                <a href="#img0351"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0351.jpg" class="count-3"></a>
-                <a href="#img0293"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0293.jpg" class="count-3"></a>
-                <a href="#img0486"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0486.jpg" class="count-3"></a>
+                <a href="#img0528">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0528.jpg">
+                </a>
+                <a href="#img0551">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0551.jpg">
+                </a>
             </div>
+
             <div class="row">
-                <a href="#img0528"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0528.jpg"></a>
-                <a href="#img0551"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0551.jpg"></a>
+                <a href="#img0306">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0306.jpg"
+                         class="count-1">
+                </a>
             </div>
+
             <div class="row">
-                <a href="#img0306"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0306.jpg" class="count-1"></a>
+                <a href="#img0347">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0347.jpg"
+                         class="count-3">
+                </a>
+                <a href="#img0376">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0376.jpg"
+                         class="count-3">
+                </a>
+                <a href="#img0443">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0443.jpg"
+                         class="count-3">
+                </a>
             </div>
-            <div class="row">
-                <a href="#img0347"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0347.jpg" class="count-3"></a>
-                <a href="#img0376"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0376.jpg" class="count-3"></a>
-                <a href="#img0443"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0443.jpg" class="count-3"></a>
-            </div>
+
             <div class="column">
-                <a href="#img0415"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0415.jpg" class="tall"></a>
+                <a href="#img0415">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0415.jpg"
+                         class="tall">
+                </a>
             </div>
+
             <div class="stacked column">
-                <a href="#img0410"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0410.jpg" class="stacked"></a>
-                <a href="#img0539"><img src="../../images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0539.jpg" class="stacked"></a>
+                <a href="#img0410">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0410.jpg"
+                         class="stacked">
+                </a>
+                <a href="#img0539">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0539.jpg"
+                         class="stacked">
+                </a>
             </div>
 
             <!-- lightbox container hidden with CSS -->
