cleaned up urls

--- a/pages/accommodations/index.html
+++ b/pages/accommodations/index.html
@@ -20,14 +20,13 @@
 			
             <div class="title">Douglas + Victoria</div>
             <div class="subtitle">September 10, 2023</div>
-	    <!--<img class="" src="../../images/.png"/>-->
 	    <nav>
-        	<div class="nav_item"><a href="../../index.html"><span>Home</span></a></div>
-                <div class="nav_item"><a href="../our_story/index.html"><span>Our Story</span></a></div>
-	        <div class="nav_item"><a href="../photos/index.html"><span>Photos</span></a></div>
-	        <div class="nav_item"><a href="../q_and_a/index.html"><span>Q & A</span></a></div>
-		<div class="nav_item"><a href="../accommodations/index.html"><span>Accommodations</span></a></div>
-	        <div class="nav_item"><a href="../registry/index.html"><span>Registry</span></a></div>
+        	<div class="nav_item"><a href="../../"><span>Home</span></a></div>
+                <div class="nav_item"><a href="../our_story/"><span>Our Story</span></a></div>
+	        <div class="nav_item"><a href="../photos/"><span>Photos</span></a></div>
+	        <div class="nav_item"><a href="../q_and_a/"><span>Q & A</span></a></div>
+		<div class="nav_item"><a href="../accommodations/"><span>Accommodations</span></a></div>
+	        <div class="nav_item"><a href="../registry/"><span>Registry</span></a></div>
 	    </nav>
 
 	</header>
