--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 			
             <div class="title">Douglas + Victoria</div>
             <div class="subtitle">September 10, 2023</div>
-	    <!--<img class="" src="../../images/.png"/>-->
 	    <nav>
                 <div class="nav_item"><a href=""><span>Home</span></a></div>
-        	<div class="nav_item"><a href="pages/our_story/index.html"><span>Our Story</span></a></div>
-	        <div class="nav_item"><a href="pages/photos/index.html"><span>Photos</span></a></div>
-		<div class="nav_item"><a href="pages/q_and_a/index.html"><span>Q & A</span></a></div>
-	        <div class="nav_item"><a href="pages/accommodations/index.html"><span>Accommodations</span></a></div>
-		<div class="nav_item"><a href="pages/registry/index.html"><span>Registry</span></a></div>
+        	<div class="nav_item"><a href="pages/our_story/"><span>Our Story</span></a></div>
+	        <div class="nav_item"><a href="pages/photos/"><span>Photos</span></a></div>
+		<div class="nav_item"><a href="pages/q_and_a/"><span>Q & A</span></a></div>
+	        <div class="nav_item"><a href="pages/accommodations/"><span>Accommodations</span></a></div>
+		<div class="nav_item"><a href="pages/registry/"><span>Registry</span></a></div>
 	    </nav>
 
 	</header>
