--- a/pages/photos/index.html
+++ b/pages/photos/index.html
@@ -23,14 +23,13 @@
 			
             <div class="title">Douglas + Victoria</div>
             <div class="subtitle">September 10, 2023</div>
-	    <!--<img class="" src="../../images/.png"/>-->
 	    <nav>
-        	<div class="nav_item"><a href="../../index.html"><span>Home</span></a></div>
-                <div class="nav_item"><a href="../our_story/index.html"><span>Our Story</span></a></div>
-	        <div class="nav_item"><a href="../photos/index.html"><span>Photos</span></a></div>
-	        <div class="nav_item"><a href="../q_and_a/index.html"><span>Q & A</span></a></div>
-		<div class="nav_item"><a href="../accommodations/index.html"><span>Accommodations</span></a></div>
-	        <div class="nav_item"><a href="../registry/index.html"><span>Registry</span></a></div>
+        	<div class="nav_item"><a href="../../"><span>Home</span></a></div>
+                <div class="nav_item"><a href="../our_story/"><span>Our Story</span></a></div>
+	        <div class="nav_item"><a href="../photos/"><span>Photos</span></a></div>
+	        <div class="nav_item"><a href="../q_and_a/"><span>Q & A</span></a></div>
+		<div class="nav_item"><a href="../accommodations/"><span>Accommodations</span></a></div>
+	        <div class="nav_item"><a href="../registry/"><span>Registry</span></a></div>
 	    </nav>
 
 	</header>
@@ -46,131 +45,131 @@
 
             <div class="row">
                 <a href="#img0166">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0166.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0166.jpg">
                 </a>
                 <a href="#img0059">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main//images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0059.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main//images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0059.jpg">
                 </a>
             </div>
 
             <div class="row">
                 <a href="#img0182">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0182.jpg" 
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0182.jpg" 
                          class="count-1">
                 </a>
             </div>
 
             <div class="row">
                 <a href="#img0288">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0288.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0288.jpg">
                 </a>
                 <a href="#img0224">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0224.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0224.jpg">
                 </a>
             </div>
 
             <div class="row">
                 <a href="#img0098">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0098.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0098.jpg">
                 </a>
                 <a href="#img0261">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0261.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0261.jpg">
                 </a>
             </div>
 
              <div class="row">
                 <a href="#img0047">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0047.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0047.jpg">
                 </a>
                 <a href="#img0063">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0063.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0063.jpg">
                 </a>
             </div>
 
             <div class="row">
                 <a href="#img0125">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0125.jpg" 
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0125.jpg" 
                          class="count-3">
                 </a>
                 <a href="#img0150">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0150.jpg" 
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0150.jpg" 
                          class="count-3">
                 </a>
                 <a href="#img0231">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0231.jpg" 
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0231.jpg" 
                          class="count-3">
                 </a>
             </div>
 
             <div class="row">
                 <a href="#img0015">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0015.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0015.jpg">
                 </a>
                 <a href="#img0035">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0035.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0035.jpg">
                 </a>
             </div>
 
             <div class="row">
                 <a href="#img0351">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0351.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0351.jpg"
                          class="count-3">
                 </a>
                 <a href="#img0293">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0293.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0293.jpg"
                          class="count-3">
                 </a>
                 <a href="#img0486">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0486.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0486.jpg"
                          class="count-3">
                 </a>
             </div>
 
             <div class="row">
                 <a href="#img0528">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0528.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0528.jpg">
                 </a>
                 <a href="#img0551">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0551.jpg">
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0551.jpg">
                 </a>
             </div>
 
             <div class="row">
                 <a href="#img0306">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0306.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0306.jpg"
                          class="count-1">
                 </a>
             </div>
 
             <div class="row">
                 <a href="#img0347">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0347.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0347.jpg"
                          class="count-3">
                 </a>
                 <a href="#img0376">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0376.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0376.jpg"
                          class="count-3">
                 </a>
                 <a href="#img0443">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0443.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0443.jpg"
                          class="count-3">
                 </a>
             </div>
 
             <div class="column">
                 <a href="#img0415">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0415.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0415.jpg"
                          class="tall">
                 </a>
             </div>
 
             <div class="stacked column">
                 <a href="#img0410">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0410.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0410.jpg"
                          class="stacked">
                 </a>
                 <a href="#img0539">
-                    <img src="https://media.githubusercontent.com/media/doug-and-victoria-websites/wedding-website/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0539.jpg"
+                    <img src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0539.jpg"
                          class="stacked">
                 </a>
             </div>
