--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" type="text/css" href="css/global.css"/>
 	<link rel="stylesheet" type="text/css" href="css/home.css"/>
 	
+        <!-- Link to javascript -->
+        <script src="js/home.js"></script>
+
     </head>
 	
     <body>
