--- a/pages/accommodations/index.html
+++ b/pages/accommodations/index.html
@@ -39,14 +39,14 @@
 	  
             <p>
             Our wedding (both ceremony and reception) will be taking place at the Oceanview of Nahant in Nahant, MA.  
-            If you look in the top right corner of the map widget below, you can find the street address of our venue; 
+            If you look in the top left corner of the map widget below, you can find the street address of our venue; 
             if you click the "directions" link next to the street address, a new tab will open in your browser with 
             Google Maps open, withe the Oceanview of Nahant as the end destination.  You need only put in the starting 
-            destination, and Google Maps will give you instructions to our venue.
+            location, and Google Maps will give you instructions to our venue.
             </p>
             
             <p>
-            It is a bit of a drive from the highway, but once you cross over the bridge into Nahant, you're almost there!
+            It is a bit of a drive from the highway, but once you cross over the isthmus into Nahant, you're almost there!
             </p>
  
             <p>
