Minor text changes

--- a/pages/q_and_a/index.html
+++ b/pages/q_and_a/index.html
@@ -53,7 +53,7 @@
 
             <h3>What is the dress code?</h3>
 	    <p>
-            Cocktail Attire!  Think cocktail dresses, jumpsuits, and dark suits 
+            Cocktail Attire!  Think cocktail dresses, jumpsuits, dark suits, 
             and ties.  If you want more info on what constitutes cocktail attire,
             <a target="_blank" href="https://www.brides.com/cocktail-attire-wedding-4844364">click here.</a>
             </p>
