minor text updates (#1)
* faq text changes

* Update index.html

* Minor text changes

* Minor text changes

---------

Co-authored-by: doug-and-victoria <109005084+doug-and-victoria@users.noreply.github.com>

--- a/pages/q_and_a/index.html
+++ b/pages/q_and_a/index.html
@@ -53,8 +53,8 @@
 
             <h3>What is the dress code?</h3>
 	    <p>
-            Cocktail Attire!  Think cocktail dresses and jumpsuits for the ladies and dark suits 
-            and ties for the gentlemen.  If you want more info on what constitutes cocktail attire,
+            Cocktail Attire!  Think cocktail dresses, jumpsuits, dark suits, 
+            and ties.  If you want more info on what constitutes cocktail attire,
             <a target="_blank" href="https://www.brides.com/cocktail-attire-wedding-4844364">click here.</a>
             </p>
 
@@ -104,7 +104,7 @@
 	    <p>
             After the ceremony, you will be able to enjoy drinks and hors'devours during cocktail hour,
             and will be treated thereafter to a plated dinner and dessert!  There will be vegetarian and 
-            vegan options available, and we will do our best to accommodate any allergies and intolerances!
+            vegan options available, and we will accommodate any allergies and intolerances!
             </p>
 
             <h3>I have dietary restrictions/allergies. What's the best way to let you know?</h3>
