added registry items to the site

--- a/pages/registry/index.html
+++ b/pages/registry/index.html
@@ -17,9 +17,10 @@
 
 	<!--Div containing standard blue header block-->
 	<header>
-			
+													
             <div class="title">Douglas + Victoria</div>
-            <div class="subtitle">September 10, 2023</div>
+            <img class="logo_header" src="../../images/logo_white.png"/>
+
 	    <nav>
                 <div class="nav_item"><a href="../../"><span>Home</span></a></div>
 	        <div class="nav_item"><a href="../photos/"><span>Photos</span></a></div>
@@ -40,14 +41,26 @@
 	    <p>Your presence at our wedding is the greatest gift of all!</p>
 	    <p>However, if you wish to spoil us, we are registered at the companies below:</p>
 
-            <h3>Place #1</h3>
-            <p><a target="_blank" href="">Click here to open the registry.</a></p>
+            <h3>Crate & Barrel</h3>
+            <p>
+                <a target="_blank" href="https://www.crateandbarrel.com/gift-registry/victoria-albanese-and-doug-salvati/r6658494">
+                    Click here to open the registry.
+                </a>
+            </p>
 
-            <h3>Place #2</h3>
-            <p><a target="_blank" href="">Click here to open the registry.</a></p>
+            <h3>Target</h3>
+            <p>
+                <a target="_blank" href="https://www.target.com/gift-registry/gift-giver?registryId=4392d1f0-b96e-11ed-b2c2-03f8115de8e1&type=WEDDING">
+                    Click here to open the registry.
+                </a>
+            </p>
 
-            <h3>Place #3</h3>
-            <p><a target="_blank" href="">Click here to open the registry.</a></p>
+            <h3>Pottery Barn</h3>
+            <p>
+                <a target="_blank" href="https://www.potterybarn.com/registry/x2fqhhpqfr/registry-list.html">
+                    Click here to open the registry.
+                </a>
+            </p>
 
 	    <br/> 
 
