updating background, fonts, and added/rearranged some content

--- a/pages/q_and_a/index.html
+++ b/pages/q_and_a/index.html
@@ -16,15 +16,17 @@
 	
     <body>
 
-	<!--Div containing standard blue header block-->
+	<!--Div containing standard header block-->
 	<header>
-			
-            <div class="title">Douglas + Victoria</div>
-            <div class="subtitle">September 10, 2023</div>
+										
+            <div class="title">Victoria + Douglas</div>
+            <img class="logo_header" src="../../images/logo_white.png"/>
+
 	    <nav>
         	<div class="nav_item"><a href="../../"><span>Home</span></a></div>
 	        <div class="nav_item"><a href="../photos/"><span>Photos</span></a></div>
 	        <div class="nav_item"><a href="../q_and_a/"><span>Q & A</span></a></div>
+	        <div class="nav_item"><a href="../directions/"><span>Directions</span></a></div>
 		<div class="nav_item"><a href="../accommodations/"><span>Accommodations</span></a></div>
 	        <div class="nav_item"><a href="../registry/"><span>Registry</span></a></div>
 	    </nav>
@@ -35,6 +37,8 @@
 	<article>
 
 	    <h1>Questions & Answers</h1>
+            <br/>
+            <br/>
 	    <hr/>
 	    <hr/>
 	
@@ -126,23 +130,13 @@
             images with you after the wedding!
             </p>
 
-            <!--<h3>What health and safety measures will you be taking during the event?</h3>
-	    <p>
-            TBD
-            </p>-->
-
+            <br/>
             <br/>
 
 	</article>
 
 	<!--Div containing standard footer block-->
-	<footer>
-	    
-            <hr/>
-	    <hr/>
-	    <p class="footer_text">We can't wait to celebrate with you!</p>
-	
-        </footer>
+	<footer></footer>
 
     </body>
 
