testing out refactored header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="css/home.css"/>
 	
         <!-- Link to javascript -->
+        <script src="js/global.js"></script>
         <script src="js/home.js"></script>
 
     </head>
@@ -19,21 +20,7 @@
     <body>
 
 	<!--Div containing standard header block-->
-	<header>
-			
-            <div class="title">Victoria & Douglas</div>
-            <img class="logo_header" src="images/logo_white.png"/>
-	    
-            <nav>
-                <div class="nav_item"><a href=""><span>Home</span></a></div>
-	        <div class="nav_item"><a href="pages/photos/"><span>Photos</span></a></div>
-		<div class="nav_item"><a href="pages/q_and_a/"><span>Q & A</span></a></div>
-	        <div class="nav_item"><a href="pages/directions/"><span>Directions</span></a></div>
-	        <div class="nav_item"><a href="pages/accommodations/"><span>Accommodations</span></a></div>
-		<div class="nav_item"><a href="pages/registry/"><span>Registry</span></a></div>
-	    </nav>
-
-	</header>
+	<header></header>
 		
 	<!--Div containing main body content of the page-->
 	<article>
