--- a/pages/registry/index.html
+++ b/pages/registry/index.html
@@ -10,27 +10,16 @@
 	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="../../css/global.css"/>
 	<link rel="stylesheet" type="text/css" href="../../css/registry.css"/>
-	
+		
+        <!-- Link to javascript -->
+        <script src="js/global.js"></script>
+
     </head>
 	
     <body>
 
 	<!--Div containing standard header block-->
-	<header>
-													
-            <div class="title">Victoria + Douglas</div>
-            <img class="logo_header" src="../../images/logo_white.png"/>
-
-	    <nav>
-                <div class="nav_item"><a href="../../"><span>Home</span></a></div>
-	        <div class="nav_item"><a href="../photos/"><span>Photos</span></a></div>
-		<div class="nav_item"><a href="../q_and_a/"><span>Q & A</span></a></div>
-	        <div class="nav_item"><a href="../directions/"><span>Directions</span></a></div>
-		<div class="nav_item"><a href="../accommodations/"><span>Accommodations</span></a></div>
-		<div class="nav_item"><a href="../registry/"><span>Registry</span></a></div>
-	    </nav>
-
-	</header>
+	<header></header>
 		
 	<!--Div containing main body content of the page-->
 	<article>
