--- a/pages/registry/index.html
+++ b/pages/registry/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="../../css/registry.css"/>
 		
         <!-- Link to javascript -->
-        <script src="js/global.js"></script>
+        <script src="../../js/global.js"></script>
 
     </head>
 	
