push the fix to all of the pages

--- a/pages/photos/index.html
+++ b/pages/photos/index.html
@@ -19,21 +19,7 @@
     <body>
 
 	<!--Div containing standard header block-->
-	<header>
-					
-            <div class="title">Victoria + Douglas</div>
-            <img class="logo_header" src="../../images/logo_white.png"/>
-	
-	    <nav>
-        	<div class="nav_item"><a href="../../"><span>Home</span></a></div>
-	        <div class="nav_item"><a href="../photos/"><span>Photos</span></a></div>
-	        <div class="nav_item"><a href="../q_and_a/"><span>Q & A</span></a></div>
-	        <div class="nav_item"><a href="../directions/"><span>Directions</span></a></div>
-		<div class="nav_item"><a href="../accommodations/"><span>Accommodations</span></a></div>
-	        <div class="nav_item"><a href="../registry/"><span>Registry</span></a></div>
-	    </nav>
-
-	</header>
+	<header></header>
 		
 	<!--Div containing main body content of the page-->
 	<article>
