--- a/pages/accommodations/index.html
+++ b/pages/accommodations/index.html
@@ -10,7 +10,10 @@
 	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="../../css/global.css"/>
 	<link rel="stylesheet" type="text/css" href="../../css/accommodations.css"/>
-	
+		
+        <!-- Link to javascript -->
+        <script src="../../js/global.js"></script>
+
     </head>
 	
     <body>
