--- a/pages/directions/index.html
+++ b/pages/directions/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" type="text/css" href="../../css/global.css"/>
 	<link rel="stylesheet" type="text/css" href="../../css/accommodations.css"/>
 	
+        <!-- Link to javascript -->
+        <script src="../../js/global.js"></script>
+	
     </head>
 	
     <body>
