--- a/pages/photos/index.html
+++ b/pages/photos/index.html
@@ -12,8 +12,9 @@
 	<link rel="stylesheet" type="text/css" href="../../css/photos.css"/>
 
         <!-- Link to javascript -->
+        <script src="../../js/global.js"></script>
         <script src="../../js/photos.js"></script>
-	
+
     </head>
 	
     <body>
