--- a/pages/q_and_a/index.html
+++ b/pages/q_and_a/index.html
@@ -11,7 +11,10 @@
 	<link rel="stylesheet" type="text/css" href="../../css/global.css"/>
 	<link rel="stylesheet" type="text/css" href="../../css/accommodations.css"/>
 	<link rel="stylesheet" type="text/css" href="../../css/q_and_a.css"/>
-	
+		
+        <!-- Link to javascript -->
+        <script src="../../js/global.js"></script>
+
     </head>
 	
     <body>
