fixed image link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	    <hr/>
 	    <hr/>
 
-            <img class="big_img"  src="https://media.githubusercontent.com/media/doug-and-victoria/wedding/main/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0486.jpg"/>
+            <img class="big_img" src="/wedding/images/engagement_photos/JUNE2022_VictoriaDoug_engaged_0486.jpg"/>
 
             <div class="content">
 
