made modifications to make the site better on mobile

--- a/pages/accommodations/index.html
+++ b/pages/accommodations/index.html
@@ -13,6 +13,7 @@
 		
         <!-- Link to javascript -->
         <script src="../../js/global.js"></script>
+        <script src="../../js/accommodations.js"></script>
 
     </head>
 	
