--- a/pages/accommodations/index.html
+++ b/pages/accommodations/index.html
@@ -30,39 +30,41 @@
             <br/>
 	    <hr/>
 	    <hr/>
+            <br/>
 	  
             <p>
             Nahant is a small beach town, and as a result there aren't any hotels there.  However, there are lots
             of options for hotels in the surrounding cities.  A few are listed below for your convenience:
             </p>
 
-            <h3>Hampton Inn Salem (9 miles away)</h3>
+            <h3>Hampton Inn Salem (9 mi away)</h3>
             <p>11 Dodge Street, Salem MA 01970  ||  (978) 414-3100  ||  <a target="_blank" href="https://www.hilton.com/en/hotels/bossahx-hampton-inn-salem-boston/">click to open website</a></p>
 
-            <h3>Hawthorne Hotel Salem (9 miles away)</h3>
+            <h3>Hawthorne Hotel Salem (9 mi away)</h3>
             <p>18 Washington Square W, Salem, MA 01970  ||  (978) 744-4080  ||  <a target="_blank" href="https://www.hawthornehotel.com/">click to open website</a></p>
 
-            <h3>Salem Waterfront Hotel (9 miles away)</h3>
+            <h3>Salem Waterfront Hotel (9 mi away)</h3>
             <p>225 Derby St., Salem MA 01970  ||  (978) 740-8788  ||  <a target="_blank" href="https://www.salemwaterfronthotel.com/">click to open website</a></p>
 
-            <h3>Four Points by Sheraton (15 miles away)</h3>
+            <h3>Four Points by Sheraton (15 mi away)</h3>
             <p>One Audubon Road, Wakefield, MA 01880  ||  (781) 245-9300  ||  <a target="_blank" href="http://www.fourpointswakefieldboston.com">click to open website</a></p>
 
-            <h3>Comfort Inn & Suites (8 miles away)</h3>
+            <h3>Comfort Inn & Suites (8 mi away)</h3>
             <p>85 American Legion Highway, Revere, MA 02151  ||  (781) 485-3600  ||  <a target="_blank" href="https://www.comfortinnboston.com/">click to open website</a></p>
 
-            <h3>Hampton Inn (10 miles away)</h3>
+            <h3>Hampton Inn (10 mi away)</h3>
             <p>230 Lee Burbank Hwy, Revere, MA 02151  ||  781-286-5665  ||  <a target="_blank" href="http://hamptoninn3.hilton.com/">click to open website</a></p>
 
-            <h3>Holiday Inn Express (10 miles away)</h3>
+            <h3>Holiday Inn Express (10 mi away)</h3>
             <p>999 Broadway, Saugus, MA 01906  ||  (781) 233-1800  ||  <a target="_blank" href="www.saugushotel.com">click to open website</a></p>
 
-            <h3>Hilton Garden Inn, Logan Airport (14 miles away)</h3>
+            <h3>Hilton Garden Inn, Logan Airport (14 mi away)</h3>
             <p>100 Boardman Street, Boston, MA 02128  ||  (617) 567-6789  ||  <a target="_blank" href="www.bostonloganairport.hgi.com"></a>click to open website</p>
 
-            <h3>Courtyard by Marriott (12 miles away)</h3>
+            <h3>Courtyard by Marriott (12 mi away)</h3>
             <p>225 William F McClellan Hwy, Boston, MA 02128  ||  (617) 569-5250  ||  <a target="_blank" href="https://www.marriott.com/">click to open website</a></p>
 
+            <br/>
             <br/>
 
 	</article>
