--- a/pages/registry/index.html
+++ b/pages/registry/index.html
@@ -29,6 +29,7 @@
             <br/>
 	    <hr/>
 	    <hr/>
+            <br/>
 
             <div class="content">	
 			
@@ -50,7 +51,7 @@
                 <div class="boxes">
                     <a target="_blank" href="https://www.target.com/gift-registry/gift-giver?registryId=4392d1f0-b96e-11ed-b2c2-03f8115de8e1&type=WEDDING">
                         <h3>Target</h3>
-                        <img class="company_logo" src="../../images/company_logos/target.png"/>
+                        <img class="center company_logo" src="../../images/company_logos/target.png"/>
                         <p>
                             Click here!
                         </p>
