fix: dont scroll when closing lightbox

--- a/pages/photos/index.html
+++ b/pages/photos/index.html
@@ -167,7 +167,8 @@
             </div>
 
             <!-- lightbox container hidden with CSS -->
-            <a href="#" class="lightbox" id="img1">
+            <!-- using fake id to prevent page from jumping somewhere specific on click -->
+            <a href="#gallery" aria-label="Close" class="lightbox" id="img1">
                 <span style=""></span>
             </a>
 
